--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #ff0000;
-  color: #0000FF;
+  background-color: green;
+  color: white;
 }
 
 nav {
@@ -49,4 +49,35 @@ article {
 .container {
   margin: 0 auto;
   width: 50%;
+}
+
+h1 {
+  font-size: 4em;
+  line-height: 1.2;
+}
+
+figcaption {
+  line-height: 1.2;
+  font-style: italic;
+  font-size: 1;
+}
+
+h3{
+  font-size: 1.75em;
+  line-height: 1.1;
+}
+
+.author{
+  text-align: center;
+  font-size: 1em;
+  line-height: 1.5;
+}
+
+p {
+  font-size: 1em;
+  line-height: 1.5
+}
+
+a{
+  text-decoration: none;
 }
